5.0a2 -> 5.0a3:
    - jbj: remove signature header padding issue from the TODO.
    - jbj: fix: --querytags as uint32, not int32, display array return type.
    - jbj: add level of chaining indirection => opaque headerSprintfExtension_s.
    - jbj: casts to remove compiler signedness warnings.
    - jbj: display 1st 8 bytes of content for XAR archive members.
    - jbj: remove newlines in pkgio messages.
    - jbj: fix: padding between signature <-> metadata headers wrong, grr.
    - jbj: rpmxar.c: rearrange the messy markup and defines.
    - jbj: remove messy HAVE_XAR_H from installed rpmxar.h include.
    - jbj: retrofit 3 needed typedef's when compiling w/o HAVE_XAR_H.
    - jbj: rescusitate txar, pass private buffer through rpmxarPush.
    - jbj: re-add rpm2cpio.c.
    - jbj: spiffy error msgs for the XAR challenged users.
    - jbj: splint fiddles for rpmxar and rpmTag.
    - jbj: bury timedRead in pkgio.c, eliminate everywhere else.
    - jbj: eliminate (unused) hPTR_t.
    - jbj: hmm, a memory leak, add doco to the TODO file.
    - jbj: eliminate hTAG_t, use "rpmTag *" instead.
    - jbj: drill rpmTag everywhere needed in header methods.
    - jbj: unsnarl header.h from everything else.
    - jbj: eliminate hRET_t, use rpmTagData instead.
    - jbj: fix: files.c: pass union ptr, not 1st element, address.
    - jbj: eliminate hTYP_t and hCNT_t typedefs everywhere.
    - jbj: fix: python: pass pgpDig, not rpmts, as 1st arg to  headerCheck.
    - jbj: fix: python: include pkgio.h for rpmpkgRead prototype.
    - jbj: fix: package.c: pass pointer to msg, not NULL, calling rpmpkgRead.
    - jbj: eliminate rpm peculier int typedefs, use stdint types instead.
    - jbj: convert all remaining uses of int_XY to stdint types.
    - jbj: revert HEADER_XARALLOCATED gloopiness.
    - jbj: functional (and leak free) -Kvv of both *.rpm and *.xar.
    - jbj: revert xar handling to rpmio model, buffer handling in rpmxar.